--- a/app/src/main/res/layout/bookmark_list.xml
+++ b/app/src/main/res/layout/bookmark_list.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/bookmarkCard"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:layout_marginVertical="5dp"
-        android:clickable="true">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
