--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -20,6 +20,39 @@
             android:textSize="30dp"
             android:textStyle="bold" />
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp">
+            <FrameLayout
+                android:id="@+id/sortFrame"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:layout_margin="5dp">
+
+                <Spinner
+                    android:id="@+id/sortExplore"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:minHeight="30dp" />
+            </FrameLayout>
+
+            <FrameLayout
+                android:id="@+id/sortRatingFrame"
+                android:layout_width="145dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_margin="100dp">
+
+                <Spinner
+                    android:id="@+id/sortRating"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:minHeight="30dp" />
+            </FrameLayout>
+        </LinearLayout>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/hotelRecyclerView"
             android:layout_width="match_parent"
