--- a/app/src/main/res/layout/fragment_food.xml
+++ b/app/src/main/res/layout/fragment_food.xml
@@ -5,10 +5,46 @@
     android:layout_height="match_parent"
     tools:context=".fragment.Food">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="660dp">
+
+        <TextView
+            android:id="@+id/food"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
+            android:text="Food"
+            android:textColor="@color/dark_green"
+            android:textSize="30dp"
+            android:textStyle="bold" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp">
+
+            <FrameLayout
+                android:layout_width="145dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_margin="255dp">
+
+                <Spinner
+                    android:id="@+id/sortFoodRating"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:minHeight="30dp" />
+            </FrameLayout>
+        </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/foodRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/food"
+            android:layout_marginTop="20dp" />
+    </RelativeLayout>
 
 </FrameLayout>
