--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -73,7 +73,7 @@
         <Button
             android:id="@+id/loginBtn"
             android:layout_width="250dp"
-            android:layout_height="35dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="100dp"
             android:layout_marginTop="50dp"
@@ -93,7 +93,7 @@
         <Button
             android:id="@+id/signUpBtn"
             android:layout_width="250dp"
-            android:layout_height="35dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="100dp"
             android:layout_marginTop="5dp"
