--- a/app/src/main/res/layout/signup.xml
+++ b/app/src/main/res/layout/signup.xml
@@ -128,7 +128,7 @@
         <Button
             android:id="@+id/signupBtn"
             android:layout_width="250dp"
-            android:layout_height="35dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="100dp"
             android:layout_marginTop="50dp"
