--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,15 +2,12 @@
 <resources>
     <color name="dark_blue">#1967BA</color>
     <color name="light_blue">#5BA2D8</color>
+    <color name="startup">#BAD6EC</color>
     <color name="grey">#E8EBEC</color>
-    <color name="purple_200">#793FFF</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="gold">#F69224</color>
     <color name="error_background">#FFCACA</color>
     <color name="error_text">#930404</color>
 </resources>
