--- a/app/src/main/res/layout/fragment_container.xml
+++ b/app/src/main/res/layout/fragment_container.xml
@@ -17,7 +17,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@color/cardview_light_background"
-        app:menu="@menu/bottom_navigation_bar" />
+        android:background="@color/light_blue"
+        app:menu="@menu/bottom_navigation_bar"
+        app:itemIconTint="@drawable/tab_colour"
+        app:itemTextColor="@drawable/tab_colour"/>
 
 </RelativeLayout>
