--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="dark_blue">#1967BA</color>
-    <color name="light_blue">#5BA2D8</color>
+    <color name="light_blue">#85C5F6</color>
     <color name="startup">#BAD6EC</color>
     <color name="grey">#E8EBEC</color>
     <color name="teal_200">#FF03DAC5</color>
