--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="dark_blue">#1967BA</color>
     <color name="light_blue">#85C5F6</color>
+    <color name="status_bar">#6CB6EF</color>
     <color name="startup">#BAD6EC</color>
     <color name="grey">#E8EBEC</color>
     <color name="teal_200">#FF03DAC5</color>
