--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -11,27 +11,24 @@
         android:gravity="center_horizontal">
         <ImageView
             android:id="@+id/hotelBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:minHeight="50dp"
             android:minWidth="50dp"
-            android:src="@drawable/hotel_icon"
-            android:tint="@color/black"
-            android:tintMode="@color/black"
-            tools:ignore="UseAppTint" />
+            android:src="@drawable/hotel_icon" />
 
         <ImageView
             android:id="@+id/foodBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:minHeight="50dp"
             android:minWidth="50dp"
             android:src="@drawable/food_icon"/>
 
         <ImageView
             android:id="@+id/transportBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:minHeight="50dp"
             android:minWidth="50dp"
             android:src="@drawable/transport_icon"/>
