--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -12,7 +12,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="?attr/actionBarSize"
             android:layout_weight="1"
             android:gravity="center"
             android:orientation="vertical">
@@ -38,6 +37,9 @@
                         android:textAlignment="center"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:textColor="@color/dark_blue"
+                        android:textStyle="bold"
+                        android:textSize="20dp"
                         android:text="Transport" />
                 </LinearLayout>
             </FrameLayout>
@@ -65,6 +67,9 @@
                         android:textAlignment="center"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:textColor="@color/dark_blue"
+                        android:textStyle="bold"
+                        android:textSize="20dp"
                         android:text="Food" />
                 </LinearLayout>
             </FrameLayout>
@@ -90,7 +95,10 @@
                         android:textAlignment="center"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:text="Food" />
+                        android:textColor="@color/dark_blue"
+                        android:textStyle="bold"
+                        android:textSize="20dp"
+                        android:text="Hotel" />
                 </LinearLayout>
             </FrameLayout>
         </LinearLayout>
