--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,6 +19,8 @@
 
     <TextView
         android:paddingLeft="10dp"
+        android:layout_gravity="center"
+        android:textColor="@color/dark_blue"
         android:id="@+id/top10TouristAttractions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
