update profile page layout

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,28 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.Profile">
+    tools:context=".fragment.Profile"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_height="230dp"
+        android:orientation="vertical"
         android:layout_marginTop="20dp">
 
         <ImageView
             android:id="@+id/appLogo"
             android:layout_width="110dp"
             android:layout_height="110dp"
-            android:layout_marginLeft="20dp"
+            android:layout_gravity="center"
             android:src="@drawable/xtravel" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
             android:gravity="center"
+            android:layout_marginTop="20dp"
             android:layout_gravity="center"
             android:orientation="vertical">
 
@@ -31,7 +32,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Your username"
-                android:textColor="@color/black"
+                android:textColor="@color/dark_blue"
                 android:layout_weight="1"
                 android:textSize="22dp" />
 
@@ -40,7 +41,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Your email"
-                android:textColor="@color/black"
+                android:textColor="@color/dark_blue"
                 android:layout_weight="1"
                 android:textSize="22dp" />
 
@@ -49,7 +50,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Your phone no"
-                android:textColor="@color/black"
+                android:textColor="@color/dark_blue"
                 android:layout_weight="1"
                 android:textSize="22dp" />
         </LinearLayout>
@@ -58,8 +59,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginVertical="20dp"
         android:layout_marginHorizontal="80dp"
         android:orientation="vertical">
 
@@ -75,18 +74,39 @@
             android:layout_marginVertical="5dp"
             android:textSize="13dp"
             android:textStyle="bold" />
-
-        <Button
-            android:id="@+id/aboutBtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="About Xiamen Tourism App"
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            android:textColorHighlight="@color/white"
-            android:textSize="13dp"
-            android:layout_marginVertical="5dp"
-            android:textStyle="bold" />
     </LinearLayout>
-</FrameLayout>
+
+    <LinearLayout
+        android:layout_marginTop="40dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="35dp"
+        android:orientation="vertical">
+        <TextView
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/dark_blue"
+            android:text="Contact Us"
+            android:textStyle="bold"
+            android:textSize="30dp"/>
+        <ImageView
+            android:id="@+id/contactUs"
+            android:layout_width="350dp"
+            android:layout_height="200dp"
+            android:layout_gravity="center"
+            android:src="@drawable/contact_us"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Develop by: Ng Pee Jou"
+            android:textColor="@color/black"
+            android:textSize="17dp"/>
+    </LinearLayout>
+</LinearLayout>
