update signup layout

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="light_blue">#85C5F6</color>
     <color name="status_bar">#6CB6EF</color>
     <color name="startup">#BAD6EC</color>
+    <color name="red">#911107</color>
     <color name="grey">#E8EBEC</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
