--- a/app/src/main/res/layout/signup.xml
+++ b/app/src/main/res/layout/signup.xml
@@ -119,11 +119,20 @@
             android:hint="Enter your password"
             android:inputType="textPassword"
             android:paddingStart="10dp"
-            android:paddingEnd="10dp"
             app:layout_constraintBottom_toTopOf="@+id/signUpBtn"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/signupPwd" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="* At least 6 characters including 1 uppercase letter, 1 lowercase letter and 1 alphanumeric character"
+            android:textColor="@color/red"
+            android:textSize="13sp"
+            android:justificationMode="inter_word"
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/signupBtn"
