--- a/app/src/main/res/layout/fragment_transport.xml
+++ b/app/src/main/res/layout/fragment_transport.xml
@@ -17,7 +17,7 @@
 
             <FrameLayout
                 android:id="@+id/sortTransportFrame"
-                android:layout_width="155dp"
+                android:layout_width="90dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
                 android:layout_margin="15dp">
@@ -26,6 +26,7 @@
                     android:id="@+id/sortTransport"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:background="@drawable/spinner_frame"
                     android:minHeight="30dp" />
             </FrameLayout>
 
