--- a/app/src/main/res/layout/transport_list.xml
+++ b/app/src/main/res/layout/transport_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -19,7 +20,7 @@
 
             <ImageView
                 android:id="@+id/transportImageList"
-                android:layout_width="85dp"
+                android:layout_width="80dp"
                 android:layout_height="match_parent" />
 
             <LinearLayout
@@ -36,7 +37,7 @@
                     android:layout_weight="1"
                     android:gravity="center_vertical"
                     android:text="Transport 1"
-                    android:textColor="@color/black"
+                    android:textColor="@color/dark_blue"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -48,14 +49,18 @@
                 android:layout_height="30dp"
                 android:src="@drawable/call_icon"
                 android:layout_marginVertical="30dp"
-                android:layout_marginRight="10dp"/>
+                android:layout_marginRight="10dp"
+                android:tint="@color/red"
+                tools:ignore="UseAppTint" />
 
             <ImageView
                 android:id="@+id/transportAddBtnList"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:src="@drawable/add_bookmark_icon"
-                android:layout_marginVertical="30dp"/>
+                android:layout_marginVertical="30dp"
+                android:tint="@color/green"
+                tools:ignore="UseAppTint"/>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
