--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="startup">#BAD6EC</color>
     <color name="red">#911107</color>
     <color name="grey">#E8EBEC</color>
+    <color name="gold">#C99803</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="green">#277A14</color>
